--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
     <title>Reselect</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="dist/main.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700,900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="dist/main.css" />
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   </head>
@@ -20,11 +26,24 @@
       <div class="content-wrap">
         <section id="home" class="section home u-show--block">
           <div class="home__logo"><img src="img/logo.png" alt="logo" /></div>
-          <div class="home__text">A Sketch plugin that restores a previous selection or saves a selection for later use.</div>
+          <div class="home__text">
+            A Sketch plugin that restores a previous selection or saves a
+            selection for later use.
+          </div>
           <button id="download" class="home__download">Download</button>
           <div class="home__github-info">
-            <a class="home__version" href="https://github.com/mfouquet/Reselect/releases" target="_blank">v2.0</a>
-            <a class="home__bug" href="https://github.com/mfouquet/reselect/issues" target="_blank">File a bug</a>
+            <a
+              class="home__version"
+              href="https://github.com/mfouquet/Reselect/releases"
+              target="_blank"
+              >v2.1.0</a
+            >
+            <a
+              class="home__bug"
+              href="https://github.com/mfouquet/reselect/issues"
+              target="_blank"
+              >File a bug</a
+            >
           </div>
         </section>
 
@@ -33,18 +52,33 @@
             <h1 class="installation__header">
               Recommended
             </h1>
-            <div class="installation__text">Search for Reselect using one of the following:</div>
+            <div class="installation__text">
+              Search for Reselect using one of the following:
+            </div>
             <ul class="installation__list">
-              <li><a href="http://sketchrunner.com/" target="_blank">Sketch Runner</a>
-              <li><a href="https://sketchpacks.com/" target="_blank">Sketchpacks</a>
-              <li><a href="http://sketchtoolbox.com/" target="_blank">Sketch Toolbox</a>
+              <li>
+                <a href="http://sketchrunner.com/" target="_blank"
+                  >Sketch Runner</a
+                >
+              </li>
+              <li>
+                <a href="https://sketchpacks.com/" target="_blank"
+                  >Sketchpacks</a
+                >
+              </li>
             </ul>
           </div>
           <div class="installation__container">
             <h1 class="installation__header">
               Old-Fashioned
             </h1>
-            <div class="installation__text">Download <a href="https://github.com/mfouquet/Reselect/archive/master.zip">this file</a> and double click to install.</div>
+            <div class="installation__text">
+              Download
+              <a href="https://github.com/mfouquet/Reselect/archive/main.zip"
+                >this file</a
+              >
+              and double click to install.
+            </div>
           </div>
         </section>
 
@@ -55,13 +89,16 @@
             </h1>
             <div class="usage__text">Reselects your previous selection.</div>
             <div class="usage__shortcut">
-              <span class="key">ctrl</span> + <span class="key">option</span> + <span class="key">\</span>
+              <span class="key">ctrl</span> + <span class="key">option</span> +
+              <span class="key">\</span>
             </div>
 
             <h1 class="usage__header">
               Save Selection
             </h1>
-            <div class="usage__text">Name and save your current selection for later use.</div>
+            <div class="usage__text">
+              Name and save your current selection for later use.
+            </div>
           </div>
           <div class="usage__container">
             <h1 class="usage__header">
@@ -69,7 +106,8 @@
             </h1>
             <div class="usage__text">Load a previously saved selection.</div>
             <div class="usage__shortcut">
-              <span class="key">ctrl</span> + <span class="key">option</span> + <span class="key">]</span>
+              <span class="key">ctrl</span> + <span class="key">option</span> +
+              <span class="key">]</span>
             </div>
 
             <h1 class="usage__header">
@@ -86,17 +124,33 @@
           <img width="160" height="41" src="http://bit.ly/RunnerBadgeBlue" />
         </a>
         <a href="https://sketchpacks.com/mfouquet/reselect/install">
-          <img width="160" height="41" src="http://sketchpacks-com.s3.amazonaws.com/assets/badges/sketchpacks-badge-install.png" />
+          <img
+            width="160"
+            height="41"
+            src="http://sketchpacks-com.s3.amazonaws.com/assets/badges/sketchpacks-badge-install.png"
+          />
         </a>
       </div>
       <div class="footer__divider"></div>
-      <p class="footer__text">Made approximately halfway between the 🌖 and the 🌍 by <a href="https://twitter.com/_fookay" class="footer__link">@_fookay</a>.</p>
+      <p class="footer__text">
+        Made approximately halfway between the 🌖 and the 🌍 by
+        <a href="https://twitter.com/_fookay" class="footer__link">@_fookay</a>.
+      </p>
 
-      <p class="footer__text">Problems and suggestions go in the <a href="https://github.com/mfouquet/reselect" class="footer__link">GitHub repo</a>.</p>
+      <p class="footer__text">
+        Problems and suggestions go in the
+        <a href="https://github.com/mfouquet/reselect" class="footer__link"
+          >GitHub repo</a
+        >.
+      </p>
 
-      <p class="footer__text">© 2017 Michael Fouquet</p>
+      <p class="footer__text">© 2020 Michael Fouquet</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"
+    ></script>
     <script src="js/main.js"></script>
   </body>
 </html>
